--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -347,7 +347,7 @@ body.modal_on {overflow: hidden;}
 
 @media (max-width: 320px){
 
-=======
+
 /*
 
 Template 2082 Pure Mix
@@ -1221,4 +1221,4 @@ footer {
 @media (max-width: 450px) {
   .intro-inner {top: 50%;}
 
-}
+}}
