--- a/src/main/resources/static/css/ticket.css
+++ b/src/main/resources/static/css/ticket.css
@@ -87,7 +87,7 @@
     margin-top: 120px;
     display: flex;
     justify-content: center;
-    height: 600px;
+    height: 650px;
     /* border: 1px solid #dddddd; */
 }
 
@@ -284,7 +284,7 @@
 
 .movie-list-wrapper {
     margin-top: 2px;
-    height: 450px;
+    height: 560px;
     padding: 4px 15px;
     flex-grow: 1;
     display: flex;
@@ -310,9 +310,8 @@
     /* background-color: #AF2D2D; */
 }
 .moveSeatButton{
-
 	padding: 5px;
-	margin-top: 300px;
+	margin-top: 390px;
 	margin-left: 120px;
 	border: none;
 }
@@ -384,4 +383,9 @@
     -webkit-border-radius: 8px;
     border-radius: 8px;
     -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .1)
+}
+
+.twojo-image{
+    text-align: center;
+    margin-top: 70px;
 }
