--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,7 +80,7 @@
                     </ul>
                     <ul>
                         <li class="white"><a href="/">상영시간표</a></li>
-                        <li class="purple"><a href="/reserve">빠른 예매</a></li>
+                        <li class="purple"><a href="/ticket">빠른 예매</a></li>
                     </ul>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                             <p>견뎌내야 할 상처에 대한 이야기</p>
                             <h3></h3>
                             <li class="white"><a href="/">상영시간표</a></li>
-                            <li class="purple"><a href="/reserve">빠른 예매</a></li>
+                            <li class="purple"><a href="/ticket">빠른 예매</a></li>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                             <p>누가 죄인인가, 누가 영웅인가!</p>
                             <h3></h3>
                             <li class="white"><a href="/">상영시간표</a></li>
-                            <li class="purple"><a href="/reserve">빠른 예매</a></li>
+                            <li class="purple"><a href="/ticket">빠른 예매</a></li>
                         </div>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                             <p>꿈과 열정, 멈추지 않는 도전을 그린 영화</p>
                             <h3></h3>
                             <li class="white"><a href="/">상영시간표</a></li>
-                            <li class="purple"><a href="/reserve">빠른 예매</a></li>
+                            <li class="purple"><a href="/ticket">빠른 예매</a></li>
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                                     <h3><span class="icon1 a15 ir_pm" th:text = "${rankList.watch_grade_nm}"></span><strong th:text="${rankList.movie_nm}"></strong></h3>
                                     <div class="info_btn">
                                         <a th:href="@{|/movie/${rankList.movie_cd}|}">상세보기</a>
-                                        <a href="/reserve">예매하기</a>
+                                        <a href="/ticket">예매하기</a>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                     <h3><span class="icon1 a15 ir_pm" th:text = "${rankList.watch_grade_nm}"></span><strong th:text="${rankList.movie_nm}"></strong></h3>
                                     <div class="info_btn">
                                         <a th:href="@{|/movie/${rankList.movie_cd}|}">상세보기</a>
-                                        <a href="/reserve">예매하기</a>
+                                        <a href="/ticket">예매하기</a>
                                     </div>
                                 </div>
                             </div>
@@ -221,7 +221,7 @@
                                     <h3><span class="icon1 a15 ir_pm" th:text = "${rankList.watch_grade_nm}"></span><strong th:text="${rankList.movie_nm}"></strong></h3>
                                     <div class="info_btn">
                                         <a th:href="@{|/movie/${rankList.movie_cd}|}">상세보기</a>
-                                        <a href="/reserve">예매하기</a>
+                                        <a href="/ticket">예매하기</a>
                                     </div>
                                 </div>
                             </div>
@@ -248,7 +248,7 @@
                                     <h3><span class="icon1 a15 ir_pm" th:text = "${rankList.watch_grade_nm}"></span><strong th:text="${rankList.movie_nm}"></strong></h3>
                                     <div class="info_btn">
                                         <a th:href="@{|/movie/${rankList.movie_cd}|}">상세보기</a>
-                                        <a href="/reserve">예매하기</a>
+                                        <a href="/ticket">예매하기</a>
                                     </div>
                                 </div>
                             </div>
@@ -366,7 +366,7 @@
                         </div>
                         <div class="btn">
                             <a href="#" class="white">좌석확인</a>
-                            <a href="/reserve" class="purple">예매하기</a>
+                            <a href="/ticket" class="purple">예매하기</a>
                         </div>
                     </div>
                 </div>
