--- a/src/main/resources/templates/payticket.html
+++ b/src/main/resources/templates/payticket.html
@@ -1,19 +1,3 @@
-<%@ page import="com.example.movie.dto.TicketDTO" %>
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-         pageEncoding="UTF-8"%>
-
-<%
-    TicketDTO ticket = (TicketDTO) request.getAttribute("ticket");
-
-    String stringPayMoney = "";
-    int payMoney = 0;
-    if (ticket != null) {
-        stringPayMoney = ticket.getPayMoney();
-        System.out.println(stringPayMoney + "test");
-        payMoney = Integer.parseInt(stringPayMoney);
-    }
-%>
-
 
 <!DOCTYPE html>
 <html>
@@ -26,13 +10,15 @@
             src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
 </head>
 <body>
-<script>
+<script th:inline="javascript">
 
 
     $(function(){
         var IMP = window.IMP;
         IMP.init('imp76771008');
-        var money = <%=payMoney%>
+        var payMoney = [[${payMoney}]];
+        var money = parseInt(payMoney);
+
 
         // console.log(money);
 
