--- a/src/main/resources/templates/mypage/common/nav.html
+++ b/src/main/resources/templates/mypage/common/nav.html
@@ -27,12 +27,12 @@
                 </dl>
             </li>
             <li>
-                <h2><a href="/ticket/"><strong>예매</strong></a></h2>
+                <h2><a href="/ticket"><strong>예매</strong></a></h2>
                 <dl class="nav_overMenu">
-                    <dt><h2><a href="/ticket/" tabindex="-1">예매</a></h2></dt>
-                    <dd><h3><a href="/ticket/">빠른예매</a></h3></dd>
-                    <dd><h3><a href="/reserve/show-times/">상영스케줄</a></h3></dd>
-                    <dd><h3><a href="/ticket/eng/newdefault.aspx">English Ticketing</a></h3></dd>
+                    <dt><h2><a href="/ticket" tabindex="-1">예매</a></h2></dt>
+                    <dd><h3><a href="/ticket">빠른예매</a></h3></dd>
+                    <dd><h3><a href="/ticket">상영스케줄</a></h3></dd>
+                    <dd><h3><a href="/ticket">English Ticketing</a></h3></dd>
                     <dd><h3><a href="/reserve/show-times/eng/">English Schedule</a></h3></dd>
                 </dl>
             </li>
