--- a/src/main/resources/templates/payticket.html
+++ b/src/main/resources/templates/payticket.html
@@ -61,7 +61,7 @@
 
                 alert(msg);
                 setTimeout(function() {
-                    document.location.href="/ticket.do";
+                    document.location.href="/ticket";
                 }, 250);
 
             }
