--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -41,6 +41,7 @@
                     <button class="theater-location">강원(5)</button>
                 </div>
                 <div class="theater-place-wrapper">
+                    <button class="theater-place">강남</button>
                     <button class="theater-place">천호</button>
                     <button class="theater-place">강변</button>
                     <button class="theater-place">건대입구</button>
@@ -65,54 +66,34 @@
     </div>
     <div class="day-part">
         <div class="reserve-title">날짜</div>
-        <div class="reserve-date"></div>
+        <button class="reserve-date"></button>
     </div>
     <div class="time-part">
         <div class="reserve-title">시간</div>
         <div class="reserve-time">
-            <div class="reserve-where">4관(Laser) 6층(총 240석) </div>
-            <div class="reserve-time-wrapper">
+            <div class="theaters" th:if="${theaters != null}" th:each="theater, i:${theaters}">
+                <div class="reserve-where" th:text="${theater.theaterDetail}"> </div>
+                <div class="reserve-time-wrapper">
                 <button class="reserve-time-button">
-                    <span class="reserve-time-want">12:20</span>
-                    <span class="reserve-time-remain">240석</span>
+                    <button type="button" class="reserve-time-want" th:text = "${theater.movieTime}"></button>
+                    <button type="button" class="reserve-time-remain" th:text = "${theater.seats}"></button>
                 </button>
-                <button class="reserve-time-button">
-                    <span class="reserve-time-want">14:20</span>
-                    <span class="reserve-time-remain">240석</span>
-                </button>
-                <button class="reserve-time-button">
-                    <span class="reserve-time-want">16:20</span>
-                    <span class="reserve-time-remain">240석</span>
-                </button>
-                <button class="reserve-time-button">
-                    <span class="reserve-time-want">18:20</span>
-                    <span class="reserve-time-remain">240석</span>
-                </button>
+                </div>
             </div>
-            <div class="reserve-where">1관 2층 </div>
-            <button class="reserve-time-button">
-                <span class="reserve-time-want">08:30</span>
-                <span class="reserve-time-remain">130석</span>
-            </button>
-            <button class="reserve-time-button">
-                <span class="reserve-time-want">15:10</span>
-                <span class="reserve-time-remain">200석</span>
-            </button>
-            <button class="reserve-time-button">
-                <span class="reserve-time-want">21:20</span>
-                <span class="reserve-time-remain">220석</span>
-            </button>
+        </div>
+
         </div>
 
         <div>
             <form class="moveSeatForm" action="moveSeat.do" method="post">
                 <input type="hidden" class="title" name="movieTitle">
                 <input type="hidden" class="selectedTheater" name="selectedTheater">
+                <input type="hidden" class="theaterDetail" name="theaterDetail">
                 <input type="hidden" class="reserveDate" name="movieDate">
                 <input type="hidden" class="runningTime" name="movieStartTime">
-                <button class="moveSeatButton" type="button"><img src="./images/reserve.png"></button>
             </form>
         </div>
+    <button class="moveSeatButton" type="button"><img src="./images/reserve.png"></button>
     </div>
 
 </div>
@@ -120,5 +101,6 @@
     <img src="./image/twojo.png">
 </div>
 <script src="js/ticket.js"></script>
+
 </body>
 </html>
