Revert "류선 ajax 구현"
This reverts commit 2d413584cfc15750ff4e2265865b0a590e813e84.

--- a/src/main/resources/templates/payticket.html
+++ b/src/main/resources/templates/payticket.html
@@ -61,7 +61,7 @@
 
                 alert(msg);
                 setTimeout(function() {
-                    document.location.href="/ticket";
+                    document.location.href="/ticket.do";
                 }, 250);
 
             }
