--- a/src/main/resources/templates/seat.html
+++ b/src/main/resources/templates/seat.html
@@ -74,19 +74,21 @@
                 <div class="selected-movie" th:text="${ticket.getMovieTitle()}"></div>
                 <div class="select-seat-information-wrapper">
                     <div class="select-theater-place selected-theater-place-info" th:text="${ticket.getSelectedTheater()}"></div>
-                    <div class="theater-detail" th:text="${ticket.getTheaterDetail()}"></div>
+                    <div class="select-theater-place selected-theater-place-info">
+                        4관(Laser)6층 </div>
                     <div class="select-theater-place">
                         <span>남은좌석</span><span class="remain-seats">152</span>/<span
                             class="all-seats">172</span>
                     </div>
+
                 </div>
                 <div class="select-theater-date">
                     <div class="theater-date" th:text="${ticket.getMovieDate()}"></div>
                     <div class="theater-time" th:text="${ticket.getMovieStartTime()}"></div>
                 </div>
                 <div class="selected-seats-wrapper">
-                    <span class="selected-seats-title">좌석번호</span>
-                    <span class="selected-seats">선택한 좌석이 없습니다.</span>
+                    <span class="selected-seats-title">좌석번호</span> <span
+                        class="selected-seats">선택한 좌석이 없습니다.</span>
                 </div>
                 <div class="ticket-price-wrapper">
                     <div class="ticket-price-title">가격</div>
@@ -113,7 +115,6 @@
 <form action="payticket.do" class="seatForm" method="POST">
     <input type="hidden" class="title" name="movieTitle">
     <input type="hidden" class="selectedTheater" name="selectedTheater">
-    <input type="hidden" class="theaterDetail" name="theaterDetail">
     <input type="hidden" class="reserveDate" name="movieDate">
     <input type="hidden" class="runningTime" name="movieStartTime">
     <input type="hidden" class="ticketNumber" name="ticketNumber">
