--- a/src/main/resources/static/css/seat.css
+++ b/src/main/resources/static/css/seat.css
@@ -354,7 +354,7 @@ body {
     font-size: 20px;
     line-height: 24px;
     color: #333;
-    background: #ffffff;
+    background: #ececec;
     overflow-y: scroll;
 }
 
