--- a/src/main/resources/static/css/ticket.css
+++ b/src/main/resources/static/css/ticket.css
@@ -114,7 +114,7 @@
 }
 
 .day-part {
-    width: 91px;
+
 }
 
 .time-part {
@@ -310,19 +310,19 @@
     /* background-color: #AF2D2D; */
 }
 .moveSeatButton{
-	padding: 5px;
-	margin-top: 390px;
-	margin-left: 120px;
-	border: none;
+    position: absolute;
+    padding: 5px;
+    margin-top: 550px;
+    margin-left: 600px;
 }
 .moveSeatButton:hover{
-	 background-color: #333333;
-	 color: white;
+    background-color: #333333;
+    color: white;
 }
 .fifteen {
     color: white;
     background-color: #AF2D2D;
-    
+
 }
 
 .eighteen {
